--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -3,9 +3,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     font-family: Aclonica;
-    background-color: #ffd000;
+    background-color: #d2ac03;
     margin-bottom: 3%;
-    padding: none!important;
+    padding: none !important;
 
 
 
@@ -18,10 +18,10 @@
 }
 
 .header-link {
-  color: #160559;
+  color: #1d0772;
   min-width: 350px; 
   width: 100%;
-  border-bottom: 3px solid white;
+  border-bottom: 3px solid rgb(31, 5, 5);
   text-decoration: none;
   padding: 1%;
 
