--- a/src/CardDatabase/CardDatabase.scss
+++ b/src/CardDatabase/CardDatabase.scss
@@ -9,6 +9,7 @@
         :hover {
             font-weight: bold;
             color: #ffe500;
+            transition-duration: .5s;
             
         }
     }
