--- a/src/App/App.css
+++ b/src/App/App.css
@@ -12,7 +12,7 @@
   text-align: center;
   background-color: #231c35;
   min-height: 100vh;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
