--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -1,4 +1,14 @@
-.header {
+.site-header {
+  color: white;
+  font-size: 1.8em;
+  padding: 3%;
+  font-family: Amita, sans serif;
+  text-align: right;
+
+  background-color: #0a0326;;
+}
+
+.menu {
   font-size: 1.3em;
   width: 100%;
   align-content: center;
@@ -7,9 +17,12 @@
   justify-content: space-around;
   flex-wrap: wrap;
   font-family: Karla, sans serif;
-  background-color: #d2ac03;
+  // background-color: #d2ac03;
+  background-color: rgb(240, 209, 30);
   margin-bottom: 3%;
   padding: none !important;
+  border-bottom: 3px solid white;
+  border-top: 3px solid white;
 
 
 
@@ -27,11 +40,18 @@
 
 }
 
-.header-link {
+
+.menu-link {
   color: #1d0772;
   min-width: 300px; 
   align-self: center;
   text-decoration: none;
-  padding: 1.3%;
+  padding: 2%;
+
+  i.material-icons.md-24.md-dark {
+    color: #1d0772;
+    font-size:1em;
+  }
 
 }
+
