Fix icon colors, recolor background to fit theme

--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -4,7 +4,7 @@
   padding: 3%;
   font-family: Amita, sans serif;
   text-align: right;
-
+  text-shadow: 0 0 10px black;
   background-color: #0a0326;;
 }
 
