--- a/src/CardPage/CardPage.scss
+++ b/src/CardPage/CardPage.scss
@@ -3,7 +3,7 @@
 
    
     .tarot-title {      
-        font-family: Amita;
+        font-family: Karla, sans serif; 
         font-style: italic;
         font-weight: 500;
         font-size: 3em;
@@ -11,7 +11,7 @@
     }
 
     .tarot-numeral {
-        font-family: Amita;
+        font-family: Karla, sans serif; 
         font-size: 2em;
     }
 
@@ -57,6 +57,11 @@
         margin: 10%;
         border-radius: 5px;
         border: white solid 2px;
+
+        :hover {
+            color: #ffd000!important;
+            border: none;
+        }
     }
 }
 
